force-app/main/default/objects/Setting__c/fields/defaultNotes__c.field-meta.xml
<CustomField>
    <fullName>defaultNotes__c</fullName>
    <label>defaultNotes</label>
    <type>TextArea</type>
</CustomField>