force-app/main/default/objects/Setting__c/fields/defaultVoucherImage__c.field-meta.xml
<CustomField>
    <fullName>defaultVoucherImage__c</fullName>
    <defaultValue>&#39;srilanka&#39;</defaultValue>
    <label>defaultVoucherImage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>