force-app/main/default/objects/Setting__c/fields/imageHardCodeUrl__c.field-meta.xml
<CustomField>
    <fullName>imageHardCodeUrl__c</fullName>
    <defaultValue>&#39;/sfc/servlet.shepherd/version/download/&#39;</defaultValue>
    <label>imageHardCodeUrl</label>
    <length>100</length>
    <type>Text</type>
</CustomField>