force-app/main/default/objects/Setting__c/fields/logoText__c.field-meta.xml
<CustomField>
    <fullName>logoText__c</fullName>
    <label>logoText</label>
    <length>30</length>
    <type>Text</type>
</CustomField>